# PslRK

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md
CodeDetector/: README.md
CodeDetector/include/: validator.h
CodeDetector/test/: validator.test.cpp
LowPslCodeDetector/: Makefile  README.md
LowPslCodeDetector/include/: container.h  generator.h  logger.h  validator.h
LowPslCodeDetector/src/: logger.cpp  main.cpp
LowPslCodeDetector/test/: generator.test.cpp  validator.test.cpp
References/: README.md
Reports/: LowPslCodes.xml  README.md
Solutions/: README.md
Solutions/01/: Makefile
Solutions/01/include/: container.h  generator.h  logger.h  validator.h
Solutions/01/src/: logger.cpp  main.cpp
Solutions/01/test/: generator.test.cpp  validator.test.cpp
Solutions/02/: Makefile  main.c  view.dat.c  view.stat.c
Solutions/03/: CMakeLists.txt  XmlManagerCBind.cpp  XmlManagerCBind.h  doxygen.cfg  main.c  view.dat.c  view.stat.c
Solutions/03/include/: generator.h
Solutions/03/src/: main.cpp
Solutions/03/test/: generator.test.cpp
Solutions/04/: Makefile
Solutions/04/include/: code.h  container.h  environment.h  generator.h  logger.h  validator.h
Solutions/04/src/: code.cpp  environment.cpp  generator.cpp  logger.cpp  main.cpp  validator.cpp
Solutions/04/test/: generator.mock.h  generator.test.cpp  generator.test.h  logger.mock.h  validator.test.cpp
Solutions/07/: Makefile  README.md  main.cpp
Solutions/08/: Makefile  README.md  main.cpp
Tools/: README.md
Tools/CodeManager/: CMakeLists.txt  README.md
Tools/CodeManager/CMakeModules/: FindPugiXML.cmake  UseGCov.cmake
Tools/CodeManager/Core/: CMakeLists.txt
Tools/CodeManager/Core/include/: Calculator.h  CalculatorInterface.h  Exception.h  Representer.h  RepresenterInterface.h  Validator.h  ValidatorInterface.h  XmlManager.h
Tools/CodeManager/Core/src/: Calculator.cpp  Exception.cpp  Representer.cpp  Validator.cpp  XmlManager.cpp
Tools/CodeManager/Core/test/: CMakeLists.txt  CalculatorTest.cpp  RepresenterTest.cpp  ValidatorTest.cpp  XmlManagerTest.cpp
Tools/CodeManager/Ui/: CMakeLists.txt
Tools/CodeManager/Ui/Cli/: CMakeLists.txt
Tools/CodeManager/Ui/Cli/src/: main.cpp
Tools/CodeManager/Ui/Qt/: CMakeLists.txt
Tools/CodeManager/Ui/Qt/include/: ActivityWidget.h  MainWidget.h  StorageManageWidget.h  ValidatorAdapter.h
Tools/CodeManager/Ui/Qt/src/: ActivityWidget.cpp  MainWidget.cpp  StorageManageWidget.cpp  main.cpp
Tools/Docker/: Dockerfile
Tools/Modeling/: README.md  bpsk.ipynb  bpsk_convolutinal_code.py  bpsk_convolutinal_code_animate.py  bpsk_convolutinal_code_trivial.py
